force-app/main/default/objects/Account/fields/Active2__c.field-meta.xml
<CustomField>
    <fullName>Active2__c</fullName>
    <label>Active2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>