force-app/main/default/objects/Account/fields/Active3__c.field-meta.xml
<CustomField>
    <fullName>Active3__c</fullName>
    <label>Active3</label>

    <!-- Documentation for admins and users1 -->
    <description>Indicates the custom active status (v3). Examples: ACTIVE, INACTIVE, PENDING.</description>
    <inlineHelpText>Provide the current status label. Max 14 characters.</inlineHelpText>

    <!-- Data type and constraints11 -->
    <type>Text</type>
    <length>20</length>

    <!-- Explicit flags for clarity/consistency -->

    <!-- Feed tracking -->
</CustomField>