force-app/main/default/objects/Account/fields/BlackBoxTest__c.field-meta.xml
<CustomField>
    <fullName>BlackBoxTest__c</fullName>
    <label>BlackBox Test</label>
    <type>Text</type>
    <length>100</length>
</CustomField>